statefulset.yml
---
apiVersion: app/v1
kind: StatefulSet
metadata:
  name: mysql
spec:
 serviceName: mysqldb
 
  replicas: 1
  selector:
    matchLabels:
      app: app-database
  template:
    metadata:
      labels:
        app: app-database
    spec:
      containers:
      - name: dbcont
        image: giridharjallepalli/phpapp:dbimage
        ports:
        - containerPort: 3306
         
         #configmap integration
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"

        voulmeMounts:
          - name: pvc-1
            mountPath: /var/lib/mysql
