db-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: mysqldb
spec:
  type: None
  selector: 
    app: app-database
  ports:
    - port: 3306
      targetPort: 3306
